# Pizzaria-Forno-di-Resistenza

./: README.md
Sistema_sobre/: engenharia_software.html
pizzaria-system/: create_database.py  pyproject.toml
pizzaria-system/migrations/: env.py
pizzaria-system/migrations/versions/: 040a1eeca1e6_atualizando_tabela_auditoria.py  129cfc05d2e0_atualizando_tabela_cliente.py  13a33ef63c38_cria_tabelas_sistema.py  5226554a93e6_create_initial_tables_1.py  59e46e006efa_create_initial_tables.py  646404b0c9ec_atualizando_tabela_funcionario.py  7ae0384eb33a_atualizando_tabela_auditoria.py  7b8861698aab_atualizando_tabelas.py  9d1aa8339fdc_add_password_reset_token_table.py  a039e367a67a_qr_code_mesa.py  a05db4ce6772_create_initial_tables_2.py  f19bc380e274_finalizado_testes.py
pizzaria-system/pizzaria_system/: app.py  audit.py  database.py  email_utils.py  models.py  schemas.py  security.py  seeds.py  settings.py
pizzaria-system/pizzaria_system/templates/: reset_password.html
pizzaria-system/routers/: auditoria.py  auth.py  categoria_produto.py  clientes.py  codigo_promocional.py  comanda.py  combo.py  funcionario.py  mesa.py  metodo_pagamento.py  produto.py
pizzaria-system/templates/: home.css  home.html  home.js
pizzaria-system/tests/: conftest.py  test_auditoria_log.py  test_categoria_produto.py  test_clientes.py  test_codigo_promocional.py  test_comanda.py  test_combos.py  test_db.py  test_funcionario.py  test_mesa.py  test_metodo_pagamento.py  test_password_recovery.py  test_produto.py  test_security.py
